Closed
Bug 165647
Opened 22 years ago
Closed 16 years ago
Warnings dude!
Categories
(Core :: Layout: Form Controls, defect, P5)
Tracking
()
RESOLVED
FIXED
Future
People
(Reporter: john, Assigned: john)
References
(Blocks 1 open bug, )
Details
Attachments
(1 obsolete file)
Dude! You have warnings! Some are intractable but one or two are particularly
nasty looking ones too--bite your head off, man.
Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•22 years ago
|
||
> 1. content/html/content/src/nsFormSubmission.cpp:1481 (See build log excerpt)
> Unused variable `nsresult rv'
>
> 1479 }
> 1480
> 1481 nsresult rv = mFormProcessor->ProcessValue(aSource, tmpNameStr, *retval);
> 1482 NS_ASSERTION(NS_SUCCEEDED(rv), "Unable to Notify form process > observer");
> 1483 }
Fake.
> 2. content/html/content/src/nsHTMLFormElement.cpp:359 (See build log excerpt)
`class nsFormControlEnumerator' has virtual functions but non-virtual destructor
>
> 357 nsSupportsArray mNotInElementsSorted;
> 358 PRUint32 mNotInElementsIndex;
> 359 };
Real and somewhat bad (sorta).
> 3. content/html/content/src/nsHTMLIFrameElement.cpp:105 (See build log excerpt)
...was hidden by `nsHTMLIFrameElement::SetAttr(int, nsIAtom *, const nsAString
&, int)'
>
> 103 nsAString& aResult) const;
> 104 NS_IMETHOD SetAttr(PRInt32 aNameSpaceID, nsIAtom* aName,
> 105 const nsAString& aValue, PRBool aNotify) {
> 106 nsresult rv = nsGenericHTMLContainerElement::SetAttr(aNameSpaceID, aName,
> 107 aValue, aNotify);
Real but not affecting current code at all; hard to resolve; see bug 179028.
Assignee | ||
Comment 2•22 years ago
|
||
Assignee | ||
Updated•22 years ago
|
Comment 3•22 years ago
|
||
Comment on attachment 105645 [details] [diff] [review]
Patch for virtual destructor warning (checked in)
this is the one I cared about... sr=bzbarsky
Attachment #105645 -
Flags: superreview+
Comment 4•22 years ago
|
||
Comment on attachment 105645 [details] [diff] [review]
Patch for virtual destructor warning (checked in)
r=dmose
Attachment #105645 -
Flags: review+
Assignee | ||
Updated•22 years ago
|
Attachment #105645 -
Attachment description: Patch for virtual destructor warning → Patch for virtual destructor warning (checked in)
Assignee | ||
Comment 5•22 years ago
|
||
Leaving bug open so I can use it for other warnings later.
Priority: -- → P5
Target Milestone: --- → Future
Updated•22 years ago
|
Blocks: buildwarning
Attachment #105645 -
Attachment is obsolete: true
Updated•16 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•