Fix virtual destructor warning, bug 165647, r=dmose, sr=bz